fix(react, vue): scroll is no longer interrupted on ios

--- a/core/src/css/structure.scss
+++ b/core/src/css/structure.scss
@@ -61,4 +61,22 @@ body {
   overscroll-behavior-y: none;
 
   text-size-adjust: none;
+
+  /**
+   * WebKit does not always promote
+   * the body to its own layer on page
+   * load in Ionic apps. Once scrolling on
+   * ion-content starts, WebKit will promote
+   * body. Unfortunately, this causes a re-paint
+   * which results in scrolling being halted
+   * until the next user gesture.
+   *
+   * This impacts the Custom Elements build.
+   * The lazy loaded build causes the browser to
+   * re-paint during hydration which causes WebKit
+   * to promote body to its own layer.
+   * In the CE Build, this hydration does not
+   * happen, so the additional re-paint does not occur.
+   */
+  transform: translateZ(0);
 }
